am-db-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: am-db
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app: aspen-mesh-controlplane
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 19001
      targetPort: 19001
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30009
