jaeger_np_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jag-np
  namespace: istio-system
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jaeger
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 16686
      targetPort: 16686
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30011
